kubernetes/etudiants-service.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: etudiants-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etudiants
  template:
    metadata:
      labels:
        app: etudiants
    spec:
      containers:
        - name: etudiants-container

          image: tynaz02/etudiants-service:Version3
          ports:
            - containerPort: 5001




---

apiVersion: v1
kind: Service
metadata:
  name: etudiants-service
spec:
  selector:
    app: etudiants
  ports:
    - protocol: TCP
      port: 80



      targetPort: 5001
  type: NodePort
