kubernetes/notes-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes
  template:
    metadata:
      labels:
        app: notes
    spec:
      containers:
        - name: notes-container
          image: tynaz02/notes-service:Version3
          ports:
            - containerPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  name: notes-service
spec:
  selector:
    app: notes
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort
