kubernetes/gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: microservices-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: route-notes
spec:
  hosts:
    - "*"
  gateways:
    - microservices-gateway
  http:
    - match:
        - uri:
            prefix: /notes
      route:
        - destination:
            host: notes-service
            port:
              number: 80

---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: route-etudiants
spec:
  hosts:
    - "*"
  gateways:
    - microservices-gateway
  http:
    - match:
        - uri:
            prefix: /etudiants
      route:
        - destination:
            host: etudiants-service
            port:
              number: 80
