kubernetes/route-front.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: route-front
spec:
  hosts:
    - "*"
  gateways:
    - microservices-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: front-service
            port:
              number: 80
